# SpinePerformaceInsights

./: .gitignore  README.md  pyproject.toml
configs/: keys.env
preprocessing/: database.py
scripts/: app.py  parse_pdf.py
utils/: literature.py
