[tool.poetry]
name = "spineperformaceinsights"
version = "0.1.0"
description = ""
authors = ["Hamed <hani.4@osu.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
pymupdf = "^1.25.5"
sentence-transformers = "^4.1.0"
faiss-cpu = "^1.11.0"
numpy = "^2.2.5"
transformers = "^4.51.3"
accelerate = "^1.6.0"
matplotlib = "^3.10.1"
langchain = "^0.3.25"
llama-cpp-python = "^0.3.8"
langchain-community = "^0.3.23"
streamlit = "^1.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
